--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Portfolio Website"
+      content="Sim-Wan-Woo"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/logo.png" />
     <!--
@@ -27,7 +27,7 @@
     <title>Portfolio Website</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
